--- a/Homework/01 Introduction.ipynb
+++ b/Homework/01 Introduction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "id": "KWlmuAMwTZ3P"
    },
@@ -73,13 +73,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "id": "HJtwrjdO6TbS"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[10 26 42]\n",
+      "[15 18 21 24]\n",
+      "b [4 9]\n",
+      "c [5 8]\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "# 1. 2A + 1\n",
+    "# 2. Sum the rows of B\n",
+    "# 3. Sum the columns of B\n",
+    "# 4. Number of elements of B greater than 5\n",
+    "# 5. C + C\n",
+    "# 6. A * B\n",
+    "# 7. (B * B) - D\n",
+    "\n",
+    "# 1. 2A + 1\n",
+    "np.multiply(A, 2) + np.add(A, 1)\n",
+    "\n",
+    "# 2. Sum the rows of B\n",
+    "print(np.sum(B, axis = 1))\n",
+    "\n",
+    "# 3. Sum the columns of B\n",
+    "print(np.sum(B, axis = 0))\n",
+    "\n",
+    "# 4. Number of elements of B greater than 5\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -344,7 +375,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -358,7 +389,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
