--- a/Homework/01 Introduction.ipynb
+++ b/Homework/01 Introduction.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "metadata": {
     "id": "KWlmuAMwTZ3P"
    },
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {
     "id": "HJtwrjdO6TbS"
    },
@@ -82,15 +82,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[10 26 42]\n",
-      "[15 18 21 24]\n",
-      "b [4 9]\n",
-      "c [5 8]\n"
+      "2A + 1 =  [ 4  7 10]\n",
+      "Sum the rows of B =  [10 26 42]\n",
+      "Sum the columns of B =  [15 18 21 24]\n",
+      "Total of greater than 5:  7\n",
+      "C + C =  [[2. 2. 2.]\n",
+      " [2. 2. 2.]]\n",
+      "A * B =  [38 44 50 56]\n",
+      "(B * B) - D =  [[ 29.  70. 110.]\n",
+      " [ 70. 173. 278.]\n",
+      " [110. 278. 445.]]\n"
      ]
     }
    ],
    "source": [
-    "# YOUR CODE HERE\n",
+    "# Exercise 1: Matrix manipulation \n",
     "# 1. 2A + 1\n",
     "# 2. Sum the rows of B\n",
     "# 3. Sum the columns of B\n",
@@ -100,17 +106,29 @@
     "# 7. (B * B) - D\n",
     "\n",
     "# 1. 2A + 1\n",
-    "np.multiply(A, 2) + np.add(A, 1)\n",
+    "A2_plus_1 = np.multiply(A, 2) + np.add(A, 1)\n",
+    "print(\"2A + 1 = \", A2_plus_1)\n",
     "\n",
     "# 2. Sum the rows of B\n",
-    "print(np.sum(B, axis = 1))\n",
+    "print(\"Sum the rows of B = \", np.sum(B, axis = 1))\n",
     "\n",
     "# 3. Sum the columns of B\n",
-    "print(np.sum(B, axis = 0))\n",
+    "print(\"Sum the columns of B = \" , np.sum(B, axis = 0))\n",
     "\n",
     "# 4. Number of elements of B greater than 5\n",
+    "occurrences_more_than_5 = B > 5\n",
+    "total = occurrences_more_than_5.sum()\n",
+    "print(\"Total of greater than 5: \", total)\n",
     "\n",
-    "\n"
+    "# 5. C + C\n",
+    "C2 = C + C\n",
+    "print(\"C + C = \", C2)\n",
+    "\n",
+    "# 6. A * B\n",
+    "print(\"A * B = \", np.matmul(A, B))\n",
+    "\n",
+    "# 7. (B * B) - D\n",
+    "print(\"(B * B) - D = \", B.dot(B.T) - D)\n"
    ]
   },
   {
@@ -374,8 +392,11 @@
    "private_outputs": true,
    "provenance": []
   },
+  "interpreter": {
+   "hash": "ad2bdc8ecc057115af97d19610ffacc2b4e99fae6737bb82f5d7fb13d2f2c186"
+  },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3.9.7 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -389,7 +410,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3"
+   "version": "3.9.7"
   }
  },
  "nbformat": 4,
