--- a/Homework/01 Introduction.ipynb
+++ b/Homework/01 Introduction.ipynb
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 35,
    "metadata": {
     "id": "AHIY5kNXUIAP"
    },
@@ -278,12 +278,12 @@
     "# use numpy built in libs of add, multiply\n",
     "\n",
     "# model1 = X + 5\n",
-    "model1 = np.add(X, 5)\n",
+    "M1 = np.add(X, 5)\n",
     "# model2 = (2*X) + 1\n",
-    "model2 = np.add(np.multiply(2,X), 1)\n",
+    "M2 = np.add(np.multiply(2,X), 1)\n",
     "\n",
-    "print(\"X + 5 = \", model1)\n",
-    "print(\"2X + 1 = \", model2)\n",
+    "print(\"X + 5 = \", M1)\n",
+    "print(\"2X + 1 = \", M2)\n",
     "\n",
     "# plot the data\n",
     "# fig = plt.figure()\n",
@@ -291,9 +291,9 @@
     "# plot the observed data points\n",
     "plt.scatter(X, Y, color = \"blue\", label =\"Observed Data\")\n",
     "# plot the model1 vs observed data points\n",
-    "plt.plot(X, model1, color = \"red\", label = \"model1 = X + 5\")\n",
+    "plt.plot(X, M1, color = \"red\", label = \"model1 = X + 5\")\n",
     "# plot the model2 vs observed data points\n",
-    "plt.plot(X, model2, color = \"lime\", label = \"model2 = 2X + 1\")\n",
+    "plt.plot(X, M2, color = \"lime\", label = \"model2 = 2X + 1\")\n",
     "# plot legend\n",
     "plt.legend(loc=\"upper left\")\n",
     "plt.show()\n"
@@ -340,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 36,
    "metadata": {
     "id": "uCeAfI5mW9sg"
    },
@@ -348,25 +348,34 @@
    "source": [
     "def MSE(true_values, predicted_values):\n",
     "  \"\"\"Return the MSE between true_values and predicted values.\"\"\"\n",
-    "    # YOUR CODE HERE"
+    "  # YOUR CODE HERE\n",
+    "  # Steps to find the MSE    \n",
+    "  # \n",
+    "  # (1) Find the equation for the regression line.    \n",
+    "  # (2) Insert X values in the equation found in step 1 in order to get the respective Y values i.e.\n",
+    "  # (3) Now subtract the new Y values (i.e. \\hat{Y}_i) from the original Y values. Thus, found values \n",
+    "  #     are the error terms. It is also known as the vertical distance of the given point from the regression line.\n",
+    "  # (4) Square the errors found in step 3.\n",
+    "  # (5) Sum up all the squares.\n",
+    "  # (6) Divide the value found in step 5 by the total number of observations.    \n",
+    "  # Mean Squared Error\n",
+    "  MSE = np.square(np.subtract(true_values,predicted_values)).mean()\n",
+    "  return MSE    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 37,
    "metadata": {
     "id": "uF-x9DI2ZOKq"
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'M1' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_7776/34723727.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'MSE for M1:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMSE\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mM1\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      2\u001b[0m \u001b[0mprint\u001b[0m \u001b[1;33m(\u001b[0m\u001b[1;34m'MSE for M2:'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mMSE\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mY\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mM2\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'M1' is not defined"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MSE for M1: 6.839502909434264\n",
+      "MSE for M2: 0.45821672338761366\n"
      ]
     }
    ],
