Updated HW 2 with latest professor updates

--- a/Homework/02 Linear Regression.ipynb
+++ b/Homework/02 Linear Regression.ipynb
@@ -7,7 +7,9 @@
    },
    "source": [
     "# Lab 2\n",
-    "Let's start with the same artificial data we used in Lab 1."
+    "Let's start with the same artificial data we used in Lab 1. Remember that we considered 2 models:\n",
+    "1. $M_1(x) = x+5$ \n",
+    "2. $M_2(x) = 2x+1$\n"
    ]
   },
   {
@@ -173,15 +175,17 @@
     "id": "8NXo1n9j1LMT"
    },
    "source": [
-    "---\n",
-    "### Exercise 1: Practice with Parameters (8 points)"
+    "### Exercise 1: Practice with Parameters\n",
+    "Add a column of 1s to $X$. Then, use matrix multiplication (np.dot) to apply $M_1$ and $M_2$ (from above) to produce vectors of predictions. Print the shapes of the predictions to validate that they have the same shape as $Y$."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "R0FIiQ-j6tgn"
+   },
    "source": [
-    "Add a column of 1s to $X$. Then, use matrix multiplication (np.dot) to apply $M_1$ and $M_2$ (from above) to produce vectors of predictions. Print the shapes of the predictions to validate that they have the same shape as $Y$."
+    "#### Student Solution"
    ]
   },
   {
@@ -196,15 +200,6 @@
     "X_with_1s = np.c_[np.ones(X.shape[0]), X]\n",
     "\n",
     "# YOUR CODE HERE"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "eCegPNe-7ORL"
-   },
-   "source": [
-    "---"
    ]
   },
   {
@@ -254,15 +249,17 @@
     "id": "QaXYiTm9ftRf"
    },
    "source": [
-    "---\n",
-    "### Exercise 2: Implementing Gradient Descent for Linear Regression (8 points)"
+    "### Exercise 2: Implementing Gradient Descent for Linear Regression\n",
+    "Fill in the `NotImplemented` parts of the gradient descent function below. There are detailed comments to help guide you. Note that this function uses vectors and matrices so you'll want to use numpy functions like `np.dot` to multiply them, for example."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "id": "gTlTUJkS4DzQ"
+   },
    "source": [
-    "Fill in the `NotImplemented` parts of the gradient descent function below. There are detailed comments to help guide you. Note that this function uses vectors and matrices so you'll want to use numpy functions like `np.dot` to multiply them, for example."
+    "##### Student Solution"
    ]
   },
   {
@@ -304,22 +301,16 @@
     "    weights.append(W)\n",
     "\n",
     "    # Evaluate the current predictions for the training examples given\n",
-    "    # the current estimate of W (you did this in exercise 5). \n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
-    "    predictions = NotImplemented \n",
+    "    # the current estimate of W (you did this in exercise 1). \n",
+    "    predictions = NotImplemented\n",
     "    \n",
     "    # Find the difference between the predictions and the actual target\n",
     "    # values.\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
     "    diff = NotImplemented\n",
     "    \n",
     "    # In standard linear regression, we want to minimize the sum of squared\n",
     "    # differences. Compute the mean squared error loss. Don't bother with the\n",
     "    # 1/2 scaling factor here.\n",
-    "    \n",
-    "    # YOUR CODE HERE\n",
     "    loss = NotImplemented\n",
     "\n",
     "    # Append the loss to the losses list to keep a track of it.\n",
@@ -333,13 +324,6 @@
     "    W = W - learning_rate * gradient\n",
     "      \n",
     "  return np.array(weights), np.array(losses)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "---"
    ]
   },
   {
@@ -382,14 +366,7 @@
     "id": "V7vGx68Ec2Si"
    },
    "source": [
-    "---\n",
-    "### Exercise 3: Interpreting the Model (8 points)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Exercise 3: Interpreting the Model\n",
     "Write down the learned model with and without an intercept term. Which model fits the data better?"
    ]
   },
@@ -399,16 +376,9 @@
     "id": "ZlVWFCRtqZIZ"
    },
    "source": [
-    "*Written answer:*"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "LpJuglliqeXX"
-   },
-   "source": [
-    "---"
+    "#### Student Solution\n",
+    "\n",
+    "WRITE YOUR ANSWERS HERE"
    ]
   },
   {
@@ -476,14 +446,8 @@
     "id": "WECpzvgkrkFk"
    },
    "source": [
-    "---\n",
-    "### Exercise 4: Plotting Progress (8 points)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "### Exercise 4: Plotting Progress\n",
+    "\n",
     "Re-run gradient descent using X_with_1s, but this time with learning_rate=0.01 and num_epochs=7.\n",
     "\n",
     "Run the plot_learning function using the weights and losses returned by gradient_descent (from above) and answer the following questions:\n",
@@ -491,6 +455,15 @@
     "1. Is learning converging faster or slower than when we used learning_rate=0.02?\n",
     "2. If you continue training, will the loss eventually reach 0?\n",
     "3. If you continue training, will the model eventually converge to $h(x)=2x+1$?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "id": "OjfwzNhzrB1D"
+   },
+   "source": [
+    "#### Student Solution"
    ]
   },
   {
@@ -510,20 +483,11 @@
     "id": "G-mgY_e5upTL"
    },
    "source": [
-    "*Written answers:*\n",
+    "WRITE YOUR ANSWERS HERE\n",
     "\n",
     "1. \n",
     "2. \n",
     "3. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "sZ4aecMAsQTP"
-   },
-   "source": [
-    "---"
    ]
   },
   {
