--- a/Homework/02 Linear Regression.ipynb
+++ b/Homework/02 Linear Regression.ipynb
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {
     "id": "aBEZ_QOX6qOi"
    },
@@ -216,7 +216,14 @@
       "Y [ 1.93405968  3.0944645   5.94536872  7.42963199  9.39545765 10.43217899\n",
       " 13.95254891 14.01246051 16.50596472 18.86958306]\n",
       "M1 [ 5  6  7  8  9 10 11 12 13 14]\n",
-      "M2 [ 1  3  5  7  9 11 13 15 17 19]\n"
+      "M2 [ 1  3  5  7  9 11 13 15 17 19]\n",
+      "w_1 [5, 1]\n",
+      "w_2 [1, 2]\n",
+      "(10,)\n",
+      "(10,)\n",
+      "(10,)\n",
+      "pred_1 [ 5.  6.  7.  8.  9. 10. 11. 12. 13. 14.]\n",
+      "pred_2 [ 1.  3.  5.  7.  9. 11. 13. 15. 17. 19.]\n"
      ]
     }
    ],
@@ -258,7 +265,7 @@
     "#                          (x_m-1_0,  x_m-1_1) )\n",
     "\n",
     "print(\"X\", X)\n",
-    "print(\"Y\", Y) \n",
+    "print(\"Y\", Y)\n",
     "\n",
     "# create the model\n",
     "# use numpy built in libs of add, multiply\n",
@@ -270,7 +277,42 @@
     "\n",
     "print(\"M1\", M1)\n",
     "print(\"M2\", M2)\n",
-    "\n"
+    "\n",
+    "# M1 = x  + 5\n",
+    "# M1 slope = 1\n",
+    "# M1 intercept = 5\n",
+    "\n",
+    "# M2 = 2x   + 1 \n",
+    "# M2 slope = 1\n",
+    "# M2 intercept = 2\n",
+    "\n",
+    "# assign parameters values 5 and 1 \n",
+    "w_1_0 = 5\n",
+    "w_1_1 = 1\n",
+    "\n",
+    "# assign parameters 1 and 2\n",
+    "w_2_0 = 1\n",
+    "w_2_1 = 2\n",
+    "\n",
+    "# weighted vector\n",
+    "w_1 = [w_1_0, w_1_1]\n",
+    "# print(\"w_1\", w_1)\n",
+    "\n",
+    "# weighted vector\n",
+    "w_2 = [w_2_0, w_2_1]\n",
+    "# print(\"w_2\", w_2)\n",
+    "\n",
+    "\n",
+    "# make prediction with assigned parameters\n",
+    "pred_1 = np.dot(X_with_1s, np.transpose(w_1))\n",
+    "pred_2 = np.dot(X_with_1s, np.transpose(w_2))\n",
+    "\n",
+    "print(Y.shape)\n",
+    "print(pred_1.shape)\n",
+    "print(pred_2.shape)\n",
+    "\n",
+    "# print(\"pred_1\", pred_1)\n",
+    "# print(\"pred_2\", pred_2)\n"
    ]
   },
   {
@@ -335,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "id": "_hP9rzDyFXTg"
    },
@@ -373,7 +415,11 @@
     "\n",
     "    # Evaluate the current predictions for the training examples given\n",
     "    # the current estimate of W (you did this in exercise 1). \n",
-    "    predictions = NotImplemented\n",
+    "       \n",
+    "    # Exercise 1 solution    \n",
+    "    # pred_1 = np.dot(X_with_1s, np.transpose(w_1))    \n",
+    "    predictions = np.dot(inputs, np.transpose(W))\n",
+    "    print(\"predictions\", predictions)\n",
     "    \n",
     "    # Find the difference between the predictions and the actual target\n",
     "    # values.\n",
@@ -410,11 +456,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "id": "B4z23bKHayGU"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running gradient descent...\n",
+      "predictions [ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n"
+     ]
+    },
+    {
+     "ename": "TypeError",
+     "evalue": "unsupported operand type(s) for *: 'float' and 'NotImplementedType'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23836/1969953194.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Running gradient descent...'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m weights, losses = gradient_descent(X_with_1s, Y, learning_rate=.02,\n\u001b[0m\u001b[0;32m      3\u001b[0m                                    num_epochs=5)\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloss\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlosses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23836/3256693005.py\u001b[0m in \u001b[0;36mgradient_descent\u001b[1;34m(inputs, outputs, learning_rate, num_epochs)\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m     \u001b[1;31m# Update weights, scaling the gradient by the learning rate.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 56\u001b[1;33m     \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m   \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlosses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'float' and 'NotImplementedType'"
+     ]
+    }
+   ],
    "source": [
     "print('Running gradient descent...')\n",
     "weights, losses = gradient_descent(X_with_1s, Y, learning_rate=.02,\n",
