--- a/Homework/02 Linear Regression.ipynb
+++ b/Homework/02 Linear Regression.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "id": "Ulmn_bFdU87t"
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {
     "id": "6qJg0IiYVJ8U"
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 6,
    "metadata": {
     "id": "aBEZ_QOX6qOi"
    },
@@ -217,13 +217,9 @@
       " 13.95254891 14.01246051 16.50596472 18.86958306]\n",
       "M1 [ 5  6  7  8  9 10 11 12 13 14]\n",
       "M2 [ 1  3  5  7  9 11 13 15 17 19]\n",
-      "w_1 [5, 1]\n",
-      "w_2 [1, 2]\n",
       "(10,)\n",
       "(10,)\n",
-      "(10,)\n",
-      "pred_1 [ 5.  6.  7.  8.  9. 10. 11. 12. 13. 14.]\n",
-      "pred_2 [ 1.  3.  5.  7.  9. 11. 13. 15. 17. 19.]\n"
+      "(10,)\n"
      ]
     }
    ],
@@ -377,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "metadata": {
     "id": "_hP9rzDyFXTg"
    },
@@ -423,19 +419,32 @@
     "    \n",
     "    # Find the difference between the predictions and the actual target\n",
     "    # values.\n",
-    "    diff = NotImplemented\n",
+    "    diff = np.subtract(predictions, outputs)\n",
+    "    print(\"diff\", diff)\n",
     "    \n",
     "    # In standard linear regression, we want to minimize the sum of squared\n",
     "    # differences. Compute the mean squared error loss. Don't bother with the\n",
     "    # 1/2 scaling factor here.\n",
-    "    loss = NotImplemented\n",
+    "    # loss = NotImplemented\n",
+    "    # Steps to find the MSE\n",
+    "    # (1) Find the equation for the regression line.    \n",
+    "    # (2) Insert X values in the equation found in step 1 in order to get the respective Y values i.e.\n",
+    "    # (3) Now subtract the new Y values (i.e. \\hat{Y}_i) from the original Y values. Thus, found values \n",
+    "    #     are the error terms. It is also known as the vertical distance of the given point from the regression line.\n",
+    "    # (4) Square the errors found in step 3.\n",
+    "    # (5) Sum up all the squares.\n",
+    "    # (6) Divide the value found in step 5 by the total number of observations.    \n",
+    "    # Mean Squared Error\n",
+    "    loss = np.square(diff).mean()\n",
+    "    print(\"loss\", loss)\n",
     "\n",
     "    # Append the loss to the losses list to keep a track of it.\n",
     "    losses.append(loss)\n",
     "    \n",
     "    # Compute the gradient with respect to the loss.\n",
     "    # [Formula (4) in the Gradient Descent Implementation]\n",
-    "    gradient = NotImplemented\n",
+    "    \n",
+    "    gradient = np.dot(diff, inputs) / m\n",
     "\n",
     "    # Update weights, scaling the gradient by the learning rate.\n",
     "    W = W - learning_rate * gradient\n",
@@ -456,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "metadata": {
     "id": "B4z23bKHayGU"
    },
@@ -466,7 +475,10 @@
      "output_type": "stream",
      "text": [
       "Running gradient descent...\n",
-      "predictions [ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n"
+      "predictions [ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n",
+      "diff [-0.93405968 -1.0944645  -2.94536872 -3.42963199 -4.39545765 -4.43217899\n",
+      " -6.95254891 -6.01246051 -7.50596472 -8.86958306]\n",
+      "loss 28.096877896274293\n"
      ]
     },
     {
@@ -476,8 +488,8 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23836/1969953194.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Running gradient descent...'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m weights, losses = gradient_descent(X_with_1s, Y, learning_rate=.02,\n\u001b[0m\u001b[0;32m      3\u001b[0m                                    num_epochs=5)\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloss\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlosses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_23836/3256693005.py\u001b[0m in \u001b[0;36mgradient_descent\u001b[1;34m(inputs, outputs, learning_rate, num_epochs)\u001b[0m\n\u001b[0;32m     54\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     55\u001b[0m     \u001b[1;31m# Update weights, scaling the gradient by the learning rate.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 56\u001b[1;33m     \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     57\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     58\u001b[0m   \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlosses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24880/1969953194.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Running gradient descent...'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m weights, losses = gradient_descent(X_with_1s, Y, learning_rate=.02,\n\u001b[0m\u001b[0;32m      3\u001b[0m                                    num_epochs=5)\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloss\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlosses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24880/2462373918.py\u001b[0m in \u001b[0;36mgradient_descent\u001b[1;34m(inputs, outputs, learning_rate, num_epochs)\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[1;31m# Update weights, scaling the gradient by the learning rate.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m     \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m   \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlosses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'float' and 'NotImplementedType'"
      ]
     }
