--- a/Homework/02 Linear Regression.ipynb
+++ b/Homework/02 Linear Regression.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {
     "id": "Ulmn_bFdU87t"
    },
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {
     "id": "6qJg0IiYVJ8U"
    },
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "id": "aBEZ_QOX6qOi"
    },
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 22,
    "metadata": {
     "id": "_hP9rzDyFXTg"
    },
@@ -415,12 +415,12 @@
     "    # Exercise 1 solution    \n",
     "    # pred_1 = np.dot(X_with_1s, np.transpose(w_1))    \n",
     "    predictions = np.dot(inputs, np.transpose(W))\n",
-    "    print(\"predictions\", predictions)\n",
+    "    # print(\"predictions\", predictions)\n",
     "    \n",
     "    # Find the difference between the predictions and the actual target\n",
     "    # values.\n",
     "    diff = np.subtract(predictions, outputs)\n",
-    "    print(\"diff\", diff)\n",
+    "    # print(\"diff\", diff)\n",
     "    \n",
     "    # In standard linear regression, we want to minimize the sum of squared\n",
     "    # differences. Compute the mean squared error loss. Don't bother with the\n",
@@ -436,14 +436,14 @@
     "    # (6) Divide the value found in step 5 by the total number of observations.    \n",
     "    # Mean Squared Error\n",
     "    loss = np.square(diff).mean()\n",
-    "    print(\"loss\", loss)\n",
+    "    # print(\"loss\", loss)\n",
     "\n",
     "    # Append the loss to the losses list to keep a track of it.\n",
     "    losses.append(loss)\n",
     "    \n",
     "    # Compute the gradient with respect to the loss.\n",
     "    # [Formula (4) in the Gradient Descent Implementation]\n",
-    "    \n",
+    "    # w_0 := w_0 - alpha(1/m) (Summation of w_0 + w_1(w_i) - y_i )\n",
     "    gradient = np.dot(diff, inputs) / m\n",
     "\n",
     "    # Update weights, scaling the gradient by the learning rate.\n",
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {
     "id": "B4z23bKHayGU"
    },
@@ -475,22 +475,18 @@
      "output_type": "stream",
      "text": [
       "Running gradient descent...\n",
-      "predictions [ 1.  2.  3.  4.  5.  6.  7.  8.  9. 10.]\n",
-      "diff [-0.93405968 -1.0944645  -2.94536872 -3.42963199 -4.39545765 -4.43217899\n",
-      " -6.95254891 -6.01246051 -7.50596472 -8.86958306]\n",
-      "loss 28.096877896274293\n"
-     ]
-    },
-    {
-     "ename": "TypeError",
-     "evalue": "unsupported operand type(s) for *: 'float' and 'NotImplementedType'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24880/1969953194.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'Running gradient descent...'\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m weights, losses = gradient_descent(X_with_1s, Y, learning_rate=.02,\n\u001b[0m\u001b[0;32m      3\u001b[0m                                    num_epochs=5)\n\u001b[0;32m      4\u001b[0m \u001b[1;32mfor\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mloss\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mzip\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlosses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      5\u001b[0m   \u001b[0mprint\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mloss\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mW\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_24880/2462373918.py\u001b[0m in \u001b[0;36mgradient_descent\u001b[1;34m(inputs, outputs, learning_rate, num_epochs)\u001b[0m\n\u001b[0;32m     66\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     67\u001b[0m     \u001b[1;31m# Update weights, scaling the gradient by the learning rate.\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 68\u001b[1;33m     \u001b[0mW\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mW\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mgradient\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     69\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     70\u001b[0m   \u001b[1;32mreturn\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mweights\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0marray\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mlosses\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for *: 'float' and 'NotImplementedType'"
+      "28.096877896274293 [1. 1.]\n",
+      "5.175011571046788 [1.09314344 1.56138661]\n",
+      "1.2139312663315942 [1.13389921 1.79439995]\n",
+      "0.5285784110759881 [1.15286867 1.89092766]\n",
+      "0.40916048838830177 [1.16277124 1.93072732]\n",
+      "\n",
+      "Running gradient descent without biases...\n",
+      "38.4112216429843 [1.]\n",
+      "8.073448610301934 [1.65138661]\n",
+      "2.4639943765589676 [1.93148285]\n",
+      "1.426806288739892 [2.05192424]\n",
+      "1.235030211302147 [2.10371403]\n"
      ]
     }
    ],
@@ -528,7 +524,13 @@
    "source": [
     "#### Student Solution\n",
     "\n",
-    "WRITE YOUR ANSWERS HERE"
+    "WRITE YOUR ANSWERS HERE\n",
+    "\n",
+    "Gradient descent with bias parameter = 0.40916048838830177 [1.16277124 1.93072732]\n",
+    "\n",
+    "Gradient descent without bias paramater = 1.235030211302147 [2.10371403]\n",
+    "\n",
+    "The gradient descent with the bias paaramenter fits the model better."
    ]
   },
   {
@@ -543,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {
     "id": "lWcTeR_gNz9d"
    },
@@ -618,13 +620,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {
     "id": "v7CK6106tWgi"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Running gradient descent...\n"
+     ]
+    },
+    {
+     "ename": "SyntaxError",
+     "evalue": "keyword argument repeated: losses (Temp/ipykernel_24880/3295456303.py, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"C:\\Users\\Victor\\AppData\\Local\\Temp/ipykernel_24880/3295456303.py\"\u001b[1;36m, line \u001b[1;32m8\u001b[0m\n\u001b[1;33m    plot_learning(inputs = X_with_1s, losses = Y, weights = weights, losses = losses)\u001b[0m\n\u001b[1;37m                                                                     ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m keyword argument repeated: losses\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "print('Running gradient descent...')\n",
+    "weights, losses = gradient_descent(X_with_1s, Y, learning_rate=0.01,\n",
+    "                                   num_epochs=7)\n",
+    "\n",
+    "# def plot_learning(inputs, outputs, weights, losses):\n",
+    "plot_learning(inputs = X_with_1s, outputs = Y, weights = weights, losses = losses)\n",
+    "\n"
    ]
   },
   {
