updates to the working version of HW 4 Exercise 1

--- a/Homework/04 Logistic Regression with Tensorflow.ipynb
+++ b/Homework/04 Logistic Regression with Tensorflow.ipynb
@@ -233,20 +233,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {
-    "id": "aFx7Ts3b6N6d"
-   },
-   "source": [
-    "---\n",
-    "### Exercise 1 (8 points)\n",
-    "\n",
-    "Display the first 5 images for each class in a 10x5 grid."
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": 223,
+   "execution_count": 224,
    "metadata": {
     "id": "HJtwrjdO6TbS"
    },
@@ -271,6 +259,9 @@
     }
    ],
    "source": [
+    "# Exercise 1 (8 points)\n",
+    "# Display the first 5 images for each class in a 10x5 grid.\n",
+    "\n",
     "# YOUR CODE HERE\n",
     "# Create a figure with subplots. This returns a list of object handles in axs\n",
     "# which we can use to populate the plots.\n",
