update to the working version of HW 4 Exercise 2

--- a/Homework/04 Logistic Regression with Tensorflow.ipynb
+++ b/Homework/04 Logistic Regression with Tensorflow.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 271,
+   "execution_count": 278,
    "metadata": {
     "id": "FblS-OVmns4a"
    },
@@ -458,10 +458,10 @@
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f0015d3ac0>"
+       "<matplotlib.image.AxesImage at 0x1f001b4d640>"
       ]
      },
-     "execution_count": 271,
+     "execution_count": 278,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -505,6 +505,7 @@
     "#         X_train_binary_sneakers = np.copy(X_train_binary[i])\n",
     "#        print(\"0 index found at \", i)\n",
     "\n",
+    "\n",
     "print(\"X_train_binary.shape = \", X_train_binary.shape)\n",
     "print(\"X_test_binary.shape = \", X_test_binary.shape)\n",
     "\n",
@@ -513,6 +514,25 @@
     "\n",
     "print(\"X_train_binary_sneakers_images = \", X_train_binary_sneakers_images.shape)\n",
     "print(\"X_train_binary_sneakers_non_sneaker_images = \",  X_train_binary_sneakers_non_sneaker_images.shape)\n",
+    "\n",
+    "cx = 14\n",
+    "cy = 14\n",
+    "sneaker_center_pixel_sum = []\n",
+    "non_sneaker_center_pixel_sum = []\n",
+    "\n",
+    "# TODO write a function\n",
+    "# loop all the images and add the values of the center pixel\n",
+    "for image in X_train_binary_sneakers_images:\n",
+    "    sneaker_center_pixel_sum.append(image[14][14])\n",
+    "    # print(\"image[14][14] = \", image[14][14])\n",
+    "    \n",
+    "# loop all the images and add the values of the center pixel\n",
+    "for image in X_train_binary_sneakers_images:\n",
+    "    non_sneaker_center_pixel_sum.append(image[14][14])\n",
+    "    # print(\"image[14][14] = \", image[14][14])\n",
+    "\n",
+    "# print(\"sum = \", sum)\n",
+    "\n",
     "\n",
     "\n",
     "# print(Y_train_binary[0])\n",
@@ -554,8 +574,6 @@
     "# (i.e. with zero variance, most of the information is captured by the mean).\n",
     "\n",
     "\n",
-    "cx = 14\n",
-    "cy = 14\n",
     "\n",
     "# mean_ = sum(x) / len(x)\n",
     "\n",
