working version of HW 4 Exercise 2

--- a/Homework/04 Logistic Regression with Tensorflow.ipynb
+++ b/Homework/04 Logistic Regression with Tensorflow.ipynb
@@ -438,7 +438,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 278,
+   "execution_count": 283,
    "metadata": {
     "id": "FblS-OVmns4a"
    },
@@ -452,16 +452,24 @@
       "Y_train_binary.shape =  (60000,)\n",
       "Y_test_binary.shape =  (10000,)\n",
       "X_train_binary_sneakers_images =  (6000, 28, 28)\n",
-      "X_train_binary_sneakers_non_sneaker_images =  (54000, 28, 28)\n"
+      "X_train_binary_sneakers_non_sneaker_images =  (54000, 28, 28)\n",
+      "sneaker_center_pixel_sum_14_14.mean =  0.6279993464052288\n",
+      "non_sneaker_center_pixel_sum_14_14_sum.mean =  0.5365848220769789\n",
+      "sneaker_center_pixel_sum.std [14][14] =  0.2420192071490903\n",
+      "non_sneaker_center_pixel_sum.std [14][14] =  0.31489747339469804\n",
+      "sneaker_center_pixel_sum_3_14.mean =  0.001250326797385621\n",
+      "non_sneaker_center_pixel_sum_3_14.mean =  0.46437283950617286\n",
+      "sneaker_center_pixel_sum_3_14.std =  0.02829347092206015\n",
+      "non_sneaker_center_pixel_sum_3_14.std =  0.3678363831207802\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<matplotlib.image.AxesImage at 0x1f001b4d640>"
+       "<matplotlib.image.AxesImage at 0x1f005370d60>"
       ]
      },
-     "execution_count": 278,
+     "execution_count": 283,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -517,22 +525,46 @@
     "\n",
     "cx = 14\n",
     "cy = 14\n",
-    "sneaker_center_pixel_sum = []\n",
-    "non_sneaker_center_pixel_sum = []\n",
+    "sneaker_center_pixel_sum_14_14 = []\n",
+    "non_sneaker_center_pixel_sum_14_14 = []\n",
     "\n",
     "# TODO write a function\n",
     "# loop all the images and add the values of the center pixel\n",
     "for image in X_train_binary_sneakers_images:\n",
-    "    sneaker_center_pixel_sum.append(image[14][14])\n",
+    "    sneaker_center_pixel_sum_14_14.append(image[cx][cy])\n",
     "    # print(\"image[14][14] = \", image[14][14])\n",
     "    \n",
     "# loop all the images and add the values of the center pixel\n",
-    "for image in X_train_binary_sneakers_images:\n",
-    "    non_sneaker_center_pixel_sum.append(image[14][14])\n",
+    "for image in X_train_binary_sneakers_non_sneaker_images:\n",
+    "    non_sneaker_center_pixel_sum_14_14.append(image[cx][cy])\n",
     "    # print(\"image[14][14] = \", image[14][14])\n",
     "\n",
-    "# print(\"sum = \", sum)\n",
+    "print(\"sneaker_center_pixel_sum_14_14.mean = \", np.mean(sneaker_center_pixel_sum_14_14))\n",
+    "print(\"non_sneaker_center_pixel_sum_14_14_sum.mean = \", np.mean(non_sneaker_center_pixel_sum_14_14))\n",
     "\n",
+    "print(\"sneaker_center_pixel_sum.std [14][14] = \", np.std(sneaker_center_pixel_sum_14_14))\n",
+    "print(\"non_sneaker_center_pixel_sum.std [14][14] = \", np.std(non_sneaker_center_pixel_sum_14_14))\n",
+    "\n",
+    "cx = 3\n",
+    "cy = 14\n",
+    "sneaker_center_pixel_sum_3_14 = []\n",
+    "non_sneaker_center_pixel_sum_3_14 = []\n",
+    "\n",
+    "# loop all the images and add the values of the center pixel\n",
+    "for image in X_train_binary_sneakers_images:\n",
+    "    sneaker_center_pixel_sum_3_14.append(image[cx][cy])\n",
+    "    # print(\"image[14][14] = \", image[14][14])\n",
+    "    \n",
+    "# loop all the images and add the values of the center pixel\n",
+    "for image in X_train_binary_sneakers_non_sneaker_images:\n",
+    "    non_sneaker_center_pixel_sum_3_14.append(image[cx][cy])\n",
+    "    # print(\"image[14][14] = \", image[14][14])\n",
+    "\n",
+    "print(\"sneaker_center_pixel_sum_3_14.mean = \", np.mean(sneaker_center_pixel_sum_3_14))\n",
+    "print(\"non_sneaker_center_pixel_sum_3_14.mean = \", np.mean(non_sneaker_center_pixel_sum_3_14))\n",
+    "\n",
+    "print(\"sneaker_center_pixel_sum_3_14.std = \", np.std(sneaker_center_pixel_sum_3_14))\n",
+    "print(\"non_sneaker_center_pixel_sum_3_14.std = \", np.std(non_sneaker_center_pixel_sum_3_14))\n",
     "\n",
     "\n",
     "# print(Y_train_binary[0])\n",
