completed HW 4 Exercise 3

--- a/Homework/04 Logistic Regression with Tensorflow.ipynb
+++ b/Homework/04 Logistic Regression with Tensorflow.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 311,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -75,29 +75,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 312,
    "metadata": {
     "id": "load_auto_data_set_code"
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-labels-idx1-ubyte.gz\n",
-      "32768/29515 [=================================] - 0s 0us/step\n",
-      "40960/29515 [=========================================] - 0s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/train-images-idx3-ubyte.gz\n",
-      "26427392/26421880 [==============================] - 2s 0us/step\n",
-      "26435584/26421880 [==============================] - 2s 0us/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-labels-idx1-ubyte.gz\n",
-      "16384/5148 [===============================================================================================] - 0s 0s/step\n",
-      "Downloading data from https://storage.googleapis.com/tensorflow/tf-keras-datasets/t10k-images-idx3-ubyte.gz\n",
-      "4423680/4422102 [==============================] - 0s 0us/step\n",
-      "4431872/4422102 [==============================] - 0s 0us/step\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from keras.datasets import fashion_mnist\n",
     "\n",
@@ -122,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 313,
    "metadata": {
     "id": "H6jGmsYAdKEK"
    },
@@ -156,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 314,
    "metadata": {
     "id": "wXukkWBWdlGj"
    },
@@ -181,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 315,
    "metadata": {
     "id": "cZpFxxStzSrP"
    },
@@ -202,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 316,
    "metadata": {
     "id": "7mfV9b4I7cMW"
    },
@@ -234,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 317,
    "metadata": {
     "id": "HJtwrjdO6TbS"
    },
@@ -390,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 244,
+   "execution_count": 318,
    "metadata": {
     "id": "3webN4USifuB"
    },
@@ -438,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 288,
+   "execution_count": 319,
    "metadata": {
     "id": "FblS-OVmns4a"
    },
@@ -566,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 320,
    "metadata": {
     "id": "sNryj_kGq8vV"
    },
@@ -644,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 321,
    "metadata": {
     "id": "ls30LfwsIZCv"
    },
@@ -677,11 +659,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 335,
    "metadata": {
     "id": "oFM62C3uhoq_"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Y_train_pred =  0.32508297339144815\n",
+      "Y_test_pred =  0.3250829733914482\n"
+     ]
+    }
+   ],
    "source": [
     "def log_loss(Y_true, Y_pred):\n",
     "  \"\"\"Returns the binary log loss for a list of labels and predictions.\n",
@@ -693,8 +684,17 @@
     "  Returns:\n",
     "    Binary log loss\n",
     "  \"\"\"\n",
-    "  # YOUR CODE HERE\n",
-    "  pass"
+    "  # YOUR CODE HERE  \n",
+    "  # logistic loss function\n",
+    "  loss = -(Y_true * np.log(Y_pred) + (1 - Y_true) * np.log(1 - Y_pred)).mean()\n",
+    "  \n",
+    "  return loss\n",
+    "\n",
+    "Y_train_pred = np.full((Y_train_binary.shape[0],), 0.1)\n",
+    "Y_test_pred = np.full((Y_test_binary.shape[0],), 0.1)\n",
+    "\n",
+    "print(\"Y_train_pred = \", log_loss(Y_train_binary, Y_train_pred))\n",
+    "print(\"Y_test_pred = \", log_loss(Y_test_binary, Y_test_pred))\n"
    ]
   },
   {
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 323,
    "metadata": {
     "id": "eaKF1dVEwsJq"
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 324,
    "metadata": {
     "id": "ZrpMK0XfX4-M"
    },
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 325,
    "metadata": {
     "id": "KkUagTzxpWdr"
    },
@@ -842,13 +842,13 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "844/844 [==============================] - 3s 1ms/step - loss: 0.1407 - binary_accuracy: 0.9432 - val_loss: 0.1152 - val_binary_accuracy: 0.9497\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.1407 - binary_accuracy: 0.9432 - val_loss: 0.1152 - val_binary_accuracy: 0.9497\n",
       "Epoch 2/5\n",
-      "844/844 [==============================] - 1s 959us/step - loss: 0.1061 - binary_accuracy: 0.9573 - val_loss: 0.1030 - val_binary_accuracy: 0.9582\n",
+      "844/844 [==============================] - 1s 1000us/step - loss: 0.1061 - binary_accuracy: 0.9573 - val_loss: 0.1030 - val_binary_accuracy: 0.9582\n",
       "Epoch 3/5\n",
-      "844/844 [==============================] - 1s 979us/step - loss: 0.0959 - binary_accuracy: 0.9631 - val_loss: 0.0959 - val_binary_accuracy: 0.9605\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.0959 - binary_accuracy: 0.9631 - val_loss: 0.0959 - val_binary_accuracy: 0.9605\n",
       "Epoch 4/5\n",
-      "844/844 [==============================] - 1s 970us/step - loss: 0.0894 - binary_accuracy: 0.9669 - val_loss: 0.0909 - val_binary_accuracy: 0.9623\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.0894 - binary_accuracy: 0.9669 - val_loss: 0.0909 - val_binary_accuracy: 0.9623\n",
       "Epoch 5/5\n",
       "844/844 [==============================] - 1s 1ms/step - loss: 0.0848 - binary_accuracy: 0.9691 - val_loss: 0.0877 - val_binary_accuracy: 0.9633\n"
      ]
@@ -965,7 +965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 326,
    "metadata": {
     "id": "t0PU3br4-zv8"
    },
@@ -1003,7 +1003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 327,
    "metadata": {
     "id": "B-o6Bdkl2gQT"
    },
@@ -1034,7 +1034,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 328,
    "metadata": {
     "id": "n9aw-V-FTlaq"
    },
@@ -1043,7 +1043,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<keras.layers.core.flatten.Flatten object at 0x000001F000029DF0>, <keras.layers.core.dense.Dense object at 0x000001F0002B5D90>]\n",
+      "[<keras.layers.core.flatten.Flatten object at 0x000001F00693FDC0>, <keras.layers.core.dense.Dense object at 0x000001F004492760>]\n",
       "Bias: -0.44215235\n",
       "Weights shape: (784,)\n"
      ]
@@ -1077,7 +1077,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 329,
    "metadata": {
     "id": "3d4NzODhbB8G"
    },
