completed HW 4 Exercise 4

--- a/Homework/04 Logistic Regression with Tensorflow.ipynb
+++ b/Homework/04 Logistic Regression with Tensorflow.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 311,
+   "execution_count": 3,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 4,
    "metadata": {
     "id": "load_auto_data_set_code"
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 313,
+   "execution_count": 5,
    "metadata": {
     "id": "H6jGmsYAdKEK"
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 314,
+   "execution_count": 6,
    "metadata": {
     "id": "wXukkWBWdlGj"
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 7,
    "metadata": {
     "id": "cZpFxxStzSrP"
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 316,
+   "execution_count": 8,
    "metadata": {
     "id": "7mfV9b4I7cMW"
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 317,
+   "execution_count": 9,
    "metadata": {
     "id": "HJtwrjdO6TbS"
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 10,
    "metadata": {
     "id": "3webN4USifuB"
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 319,
+   "execution_count": 11,
    "metadata": {
     "id": "FblS-OVmns4a"
    },
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 320,
+   "execution_count": 12,
    "metadata": {
     "id": "sNryj_kGq8vV"
    },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 13,
    "metadata": {
     "id": "ls30LfwsIZCv"
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 14,
    "metadata": {
     "id": "oFM62C3uhoq_"
    },
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 323,
+   "execution_count": 15,
    "metadata": {
     "id": "eaKF1dVEwsJq"
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 16,
    "metadata": {
     "id": "ZrpMK0XfX4-M"
    },
@@ -799,7 +799,8 @@
       " [0.19025397]\n",
       " [0.14809626]\n",
       " [0.48857784]\n",
-      " [0.32321048]]\n"
+      " [0.32321048]]\n",
+      "[0 0 0 0 0]\n"
      ]
     }
    ],
@@ -808,7 +809,8 @@
     "model = build_model()\n",
     "\n",
     "# Make a prediction for five inputs.\n",
-    "print(model.predict(X_train_binary[0:5]))"
+    "print(model.predict(X_train_binary[0:5]))\n",
+    "print(Y_train_binary[0:5])\n"
    ]
   },
   {
@@ -832,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 17,
    "metadata": {
     "id": "KkUagTzxpWdr"
    },
@@ -842,9 +844,9 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/5\n",
-      "844/844 [==============================] - 1s 1ms/step - loss: 0.1407 - binary_accuracy: 0.9432 - val_loss: 0.1152 - val_binary_accuracy: 0.9497\n",
+      "844/844 [==============================] - 2s 1ms/step - loss: 0.1407 - binary_accuracy: 0.9432 - val_loss: 0.1152 - val_binary_accuracy: 0.9497\n",
       "Epoch 2/5\n",
-      "844/844 [==============================] - 1s 1000us/step - loss: 0.1061 - binary_accuracy: 0.9573 - val_loss: 0.1030 - val_binary_accuracy: 0.9582\n",
+      "844/844 [==============================] - 1s 1ms/step - loss: 0.1061 - binary_accuracy: 0.9573 - val_loss: 0.1030 - val_binary_accuracy: 0.9582\n",
       "Epoch 3/5\n",
       "844/844 [==============================] - 1s 1ms/step - loss: 0.0959 - binary_accuracy: 0.9631 - val_loss: 0.0959 - val_binary_accuracy: 0.9605\n",
       "Epoch 4/5\n",
@@ -965,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 326,
+   "execution_count": 18,
    "metadata": {
     "id": "t0PU3br4-zv8"
    },
@@ -1003,13 +1005,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 46,
    "metadata": {
     "id": "B-o6Bdkl2gQT"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "correct =  9699\n",
+      "total =  (10000,)\n",
+      "[0.9699]\n"
+     ]
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# threshold function\n",
+    "predictions = np.where( test_predictions >= 0.5, 1, 0 )\n",
+    "\n",
+    "correct = np.array(predictions == Y_test_binary).sum()\n",
+    "total = Y_test_binary.shape\n",
+    "\n",
+    "print(\"correct = \", correct)\n",
+    "print(\"total = \", total)\n",
+    "\n",
+    "# print accuracy\n",
+    "accuracy = correct / total\n",
+    "print(accuracy)"
    ]
   },
   {
@@ -1034,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 328,
+   "execution_count": 20,
    "metadata": {
     "id": "n9aw-V-FTlaq"
    },
@@ -1043,7 +1068,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<keras.layers.core.flatten.Flatten object at 0x000001F00693FDC0>, <keras.layers.core.dense.Dense object at 0x000001F004492760>]\n",
+      "[<keras.layers.core.flatten.Flatten object at 0x00000295B34DC970>, <keras.layers.core.dense.Dense object at 0x00000295CFAA6D60>]\n",
       "Bias: -0.44215235\n",
       "Weights shape: (784,)\n"
      ]
@@ -1077,7 +1102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 329,
+   "execution_count": 21,
    "metadata": {
     "id": "3d4NzODhbB8G"
    },
