--- a/Homework/04 Logistic Regression with Tensorflow.ipynb
+++ b/Homework/04 Logistic Regression with Tensorflow.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 92,
    "metadata": {
     "id": "7X58hOMTUH-w"
    },
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 93,
    "metadata": {
     "id": "load_auto_data_set_code"
    },
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 94,
    "metadata": {
     "id": "H6jGmsYAdKEK"
    },
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 95,
    "metadata": {
     "id": "wXukkWBWdlGj"
    },
@@ -163,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 96,
    "metadata": {
     "id": "cZpFxxStzSrP"
    },
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 97,
    "metadata": {
     "id": "7mfV9b4I7cMW"
    },
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 98,
    "metadata": {
     "id": "HJtwrjdO6TbS"
    },
@@ -372,7 +372,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 99,
    "metadata": {
     "id": "3webN4USifuB"
    },
@@ -420,7 +420,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 100,
    "metadata": {
     "id": "FblS-OVmns4a"
    },
@@ -548,7 +548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 101,
    "metadata": {
     "id": "sNryj_kGq8vV"
    },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 102,
    "metadata": {
     "id": "ls30LfwsIZCv"
    },
@@ -659,7 +659,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 103,
    "metadata": {
     "id": "oFM62C3uhoq_"
    },
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 104,
    "metadata": {
     "id": "eaKF1dVEwsJq"
    },
@@ -786,7 +786,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 105,
    "metadata": {
     "id": "ZrpMK0XfX4-M"
    },
@@ -834,7 +834,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 106,
    "metadata": {
     "id": "KkUagTzxpWdr"
    },
@@ -846,13 +846,13 @@
       "Epoch 1/5\n",
       "844/844 [==============================] - 2s 1ms/step - loss: 0.1407 - binary_accuracy: 0.9432 - val_loss: 0.1152 - val_binary_accuracy: 0.9497\n",
       "Epoch 2/5\n",
-      "844/844 [==============================] - 1s 1ms/step - loss: 0.1061 - binary_accuracy: 0.9573 - val_loss: 0.1030 - val_binary_accuracy: 0.9582\n",
+      "844/844 [==============================] - 1s 987us/step - loss: 0.1061 - binary_accuracy: 0.9573 - val_loss: 0.1030 - val_binary_accuracy: 0.9582\n",
       "Epoch 3/5\n",
-      "844/844 [==============================] - 1s 1ms/step - loss: 0.0959 - binary_accuracy: 0.9631 - val_loss: 0.0959 - val_binary_accuracy: 0.9605\n",
+      "844/844 [==============================] - 1s 933us/step - loss: 0.0959 - binary_accuracy: 0.9631 - val_loss: 0.0959 - val_binary_accuracy: 0.9605\n",
       "Epoch 4/5\n",
-      "844/844 [==============================] - 1s 1ms/step - loss: 0.0894 - binary_accuracy: 0.9669 - val_loss: 0.0909 - val_binary_accuracy: 0.9623\n",
+      "844/844 [==============================] - 1s 917us/step - loss: 0.0894 - binary_accuracy: 0.9669 - val_loss: 0.0909 - val_binary_accuracy: 0.9623\n",
       "Epoch 5/5\n",
-      "844/844 [==============================] - 1s 1ms/step - loss: 0.0848 - binary_accuracy: 0.9691 - val_loss: 0.0877 - val_binary_accuracy: 0.9633\n"
+      "844/844 [==============================] - 1s 974us/step - loss: 0.0848 - binary_accuracy: 0.9691 - val_loss: 0.0877 - val_binary_accuracy: 0.9633\n"
      ]
     },
     {
@@ -967,7 +967,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 107,
    "metadata": {
     "id": "t0PU3br4-zv8"
    },
@@ -1005,7 +1005,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 108,
    "metadata": {
     "id": "B-o6Bdkl2gQT"
    },
@@ -1059,7 +1059,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 109,
    "metadata": {
     "id": "n9aw-V-FTlaq"
    },
@@ -1068,7 +1068,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[<keras.layers.core.flatten.Flatten object at 0x00000295B34DC970>, <keras.layers.core.dense.Dense object at 0x00000295CFAA6D60>]\n",
+      "[<keras.layers.core.flatten.Flatten object at 0x000002B871DA8F70>, <keras.layers.core.dense.Dense object at 0x000002B86183B0D0>]\n",
       "Bias: -0.44215235\n",
       "Weights shape: (784,)\n"
      ]
@@ -1102,13 +1102,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 110,
    "metadata": {
     "id": "3d4NzODhbB8G"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.392\n",
+      "WARNING:tensorflow:Model was constructed with shape (None, 28, 28) for input KerasTensor(type_spec=TensorSpec(shape=(None, 28, 28), dtype=tf.float32, name='flatten_input'), name='flatten_input', description=\"created by layer 'flatten_input'\"), but it was called on an input with incompatible shape (None, 784).\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.39122826]], dtype=float32)"
+      ]
+     },
+     "execution_count": 110,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# YOUR CODE HERE"
+    "# YOUR CODE HERE\n",
+    "\n",
+    "# create a fake image\n",
+    "fake_sneaker_img = np.zeros([28,28])\n",
+    "# flatten fake image\n",
+    "fake_sneaker_flat = fake_sneaker_img.flatten()\n",
+    "\n",
+    "# logistic function:\n",
+    "# f(x) = (L / 1 + e^(-k(x-x_0)))\n",
+    "\n",
+    "def sigmoid(x):\n",
+    "    s = 1/(1+np.exp(-x))\n",
+    "    return s\n",
+    "  \n",
+    "prediction = sigmoid(fake_sneaker_flat)\n",
+    "# manual sigmoid function \n",
+    "print(prediction.sum()/1000)\n",
+    "\n",
+    "# model predict function\n",
+    "model.predict(np.expand_dims(fake_sneaker_flat, axis=0))\n"
    ]
   },
   {
